--- a/style.css
+++ b/style.css
@@ -25,7 +25,18 @@ body{
 }
 
 .container{
+    width:100%;
     padding: 10px 10%;
+}
+.container1
+{
+    margin-left: 600px;
+    height:200px;
+}
+.full-container
+{
+    display:flex;
+    width:100%;
 }
 
 nav{
@@ -63,6 +74,7 @@ nav ul li a::after{
     transition: 0.5s;
 }
 
+
 nav ul li a:hover::after{
     width:100%;
 }
@@ -88,9 +100,13 @@ nav ul li a:hover::after{
     color: #ababab ;
 }
 
+
+.contactflex
+{
+    margin-left:200px;
+}
 .row{
     display: flex;
-    justify-content: space-between;
     flex-wrap: wrap;
 }
 
@@ -111,6 +127,11 @@ nav ul li a:hover::after{
     font-size: 60px;
     font-weight: 600;
     color: #fff;
+}
+.sub-title
+{
+    margin-left:310px;
+    padding-bottom: 30px;
 }
 
 .tab-titles{
@@ -164,10 +185,17 @@ nav ul li a:hover::after{
 #services{
     padding: 30px;
     color: #fff;
+  
 }
-
+.tushar
+{
+    height:500px;
+    width:400px;
+    border-radius:20px;
+}
 .services-list{
-    display: grid;
+  
+    display: flex;
     grid-template-columns: repeat(auto-fit, minmax(250px,1fr));
     grid-gap: 40px;
     margin-top: 50px;
@@ -176,6 +204,7 @@ nav ul li a:hover::after{
 .services-list div{
     background: #262626;
     padding: 40px;
+  
     font-size: 13px;
     font-weight: 300;
     border-radius: 30px;
@@ -184,6 +213,7 @@ nav ul li a:hover::after{
 
 .services-list div i{
    font-size: 50px;
+   width:400px;
    margin-bottom: 30px; 
     color: #fff;
 }
@@ -279,8 +309,7 @@ nav ul li a:hover::after{
 }
 
 .btn{
-    display: block;
-    margin: 50px auto;
+    margin:300px;  
     width: fit-content;
     border: 2px solid;
     padding: 14px 50px;
@@ -295,6 +324,7 @@ nav ul li a:hover::after{
 .btn:hover{
     background: #ff004f;
 }
+
 
 /*----Contact----*/
 .contact-left{
@@ -355,6 +385,11 @@ form input, form textarea{
     font-size: 18px;
     border-radius: 6px;
 }
+.top-content
+{
+    width:1500px;
+}
+
 
 form .btn2{
     padding: 14px 60px;
@@ -376,11 +411,13 @@ nav .fa-solid{
     .header-text{
         margin-top: 100%;
         font-size: 16px;
+        
        
     }
 
     .header-text h1{
         font-size: 30px;
+    
     }
 
     nav .fa-solid{
@@ -414,6 +451,7 @@ nav .fa-solid{
 
     .subtitle{
         font-size: 40px;
+    
     }
     .about-col-1, .about-col-2{
         flex-basis: 100%;
@@ -421,10 +459,13 @@ nav .fa-solid{
 
     .about-col-1{
         margin-bottom: 30px ;
+        margin-top:300px;
+
     }
 
     .about-col-2{
         font-size: 14px;
+        margin-top:300px;
     }
 
     .tab-links{
